--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
-    "cypress-browser-permissions": "^1.1.0"
+    "axios": "^1.2.1",
+    "cypress-browser-permissions": "^1.1.0",
+    "express": "^4.18.2",
+    "nodemailer": "^6.8.0"
   },
   "name": "camera-cypress",
   "description": "step #1",
@@ -13,7 +16,8 @@
   "scripts": {
     "test": "npm run start --record --spec \"cypress/e2e/multipleRoomcreation.cy.js/*\" -- --headed",
     "start": "cypress run",
-    "dev": "cypress run --browser chrome -- --headed"
+    "dev": "cypress run --browser chrome -- --headed",
+    "server": "node ./server/index"
   },
   "repository": {
     "type": "git",
