--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "axios": "^1.2.1",
+    "concurrently": "^7.6.0",
     "cypress-browser-permissions": "^1.1.0",
     "express": "^4.18.2",
     "nodemailer": "^6.8.0"
@@ -17,7 +18,8 @@
     "test": "npm run start --record --spec \"cypress/e2e/multipleRoomcreation.cy.js/*\" -- --headed",
     "start": "cypress run",
     "dev": "cypress run --browser chrome -- --headed",
-    "server": "node ./server/index"
+    "server": "node ./server/index",
+    "conn": "concurrently \"npm run dev\" \"npm run server\" "
   },
   "repository": {
     "type": "git",
