added node process id logs and kill process if any one process kill in concurrently

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "start": "cypress run",
     "dev": "cypress run --browser chrome -- --headed",
     "server": "node ./server/index",
-    "conn": "concurrently \"npm run dev\" \"npm run server\" "
+    "conn": "concurrently -k, --kill-others \"npm run dev\" \"npm run server\" "
   },
   "repository": {
     "type": "git",
